# ai_voice-rs

./: .gitignore  Cargo.toml  README.md
crates/ai_voice/: Cargo.toml
crates/ai_voice-sys/: Cargo.toml  build.rs
crates/ai_voice-sys/.metadata/: AI.Talk.Editor.Api.IDL  generate.proj  main.cpp
crates/ai_voice-sys/.windows/winmd/: AI.Talk.Editor.Api.winmd
crates/ai_voice-sys/src/: lib.rs
crates/ai_voice/src/: ai_voice.rs  lib.rs
